# learning-loop-closure

./: .gitignore  README.md  config.py  create_recall_datasets.py  create_training_data.py  dataset.py  evaluate_classification.py  evaluate_embedder_classification.py  evaluate_embeddings.py  evaluate_loop_closure.py  evaluate_model.py  evaluate_model_siamese.py  evaluate_recall.py  evaluate_rotation_handling.py  evaluate_top_k.py  find_loop_closure.py  generate_lcc_dataset.py  generate_uniqueness_scores.py  helpers.py  model.py  pc_helpers.py  plot_results.py  results.md  test_helpers.py  train.py  train_discrete.py  train_laser.py  train_local_uncertainty.py  train_structured.py  visualize_labeled_timestamps.py  visualize_loop_closures.py  visualize_model.py  visualize_recall_dataset.py  visualize_triplets.py
data_processing/: create_training_data.py  data_processing_helpers.py  dataset.py
evaluation/: evaluate_discrete_classification.py  evaluate_embedder_classification.py  evaluate_matcher_classification.py  evaluate_recall.py  evaluate_recall_interactive.py  evaluate_structured_classification.py  evaluation_helpers.py  generate_manual_evaluation_set.py  visualize_cloud.py  visualize_discrete_triplets.py  visualize_lc_trajectory.py  visualize_learned_transforms.py  visualize_localization.py  visualize_triplets.py
laser_scan_matcher/src/laser_scan_matcher/: laser_scan_matcher.py
learning/: README.md  dataset.py  embed.py  embed_file_list.json  feedback  model.py  test_overlap.py  train.py  train_full.py  train_helpers.py  train_lcc.py  train_lcc_siamese.py  train_siamese.py  train_transform.py
lidar_pointcloud/: CMakeLists.txt  Makefile  manifest.xml
lidar_pointcloud/src/: convert_pointcloud.cc  convert_pointcloud.h  main.cc  pointcloud_helpers.cc  pointcloud_helpers.h
local_uncertainty_estimator/: CMakeLists.txt  package.xml
local_uncertainty_estimator/src/local_uncertainty_estimator/: local_uncertainty_estimator.py
ltf_segmentation/: ltf_dataset.py  ltf_helpers.py  ltf_model.py  train_ltf.py  visualize_ltf.py
point_cloud_embedder/src/point_cloud_embedder/: point_cloud_embedder.py  point_cloud_embedder_client.py
visualize_loop_closure/: CMakeLists.txt  README.md  manifest.xml  run.sh  temp_pc_file.txt
visualize_loop_closure/msg_gen/cpp/include/visualize_loop_closure/: CobotOdometryMsg.h
visualize_loop_closure/msg_gen/lisp/: CobotOdometryMsg.lisp  _package.lisp  _package_CobotOdometryMsg.lisp  visualize_loop_closure-msg.asd
visualize_loop_closure/src/: kdtree.h  main.cc
visualize_loop_closure/src/visualize_loop_closure/msg/: _CobotOdometryMsg.py
