<package>
  <description>
    PyTorch network for predicting the local uncertainty of a given scan
  </description>
  <name>local_uncertainty_estimator</name>
  <version>0.1.0</version>
  <maintainer email="ksikand@utexas.edu">Kavan Sikand</maintainer>
  <author>Kavan Sikand</author>
  <license>MIT</license>
  <url></url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>



